--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,9 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "@vitejs/plugin-react-swc":"^4.2.1",
+    "vite-tsconfig-paths":"^4.3.2",
+    "vite-plugin-svgr":"^4.2.0"
   }
 }
